--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <button class="streaming">Watch Now</button>
                     </figure>
                     <figure class="box-mov">
-                        <img class="mov" src="https://lh3.googleusercontent.com/proxy/uLb7egMhFIdZyYCiT6sJ7bbR9Qmb96CtqKPpL2gbEJnYTU8ZJE1IeWvFSfFxlfG01PENqShDq30TQzgcFNBWyVu6kHabUxqnVTirV35xTG8xfHY">
+                        <img class="mov" src="https://m.media-amazon.com/images/M/MV5BZWFiZTM4ZDUtNzU0My00YmYxLWEzMDQtNzkxMzJhYmNiMTE3XkEyXkFqcGdeQXVyODkzNTgxMDg@._V1_.jpg">
                         <figcaption class="u-title">Jungle Cruise</figcaption>
                         <button class="streaming">Watch Now</button>
                     </figure>
